update java-dev profile